[package]
name = "hashicorp-keyvault"
version = "0.1.1"
edition = "2021"
description = "A simple secret management crate for CRUD operations on secrets"
license = "MIT"
categories = ["authentication", "cryptography", "config"]
keywords = ["hashicorp", "vault", "secrets", "keyvault"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
